[gd_scene load_steps=13 format=3 uid="uid://chpb4jyqs3ces"]

[ext_resource type="Script" path="res://player.gd" id="1_mxhpc"]
[ext_resource type="Texture2D" uid="uid://dmgb2321mssu8" path="res://assets/player.png" id="2_xdt7w"]
[ext_resource type="Script" path="res://BeamSpell.gd" id="3_vdevf"]
[ext_resource type="Script" path="res://TargetRect.gd" id="4_i31qc"]
[ext_resource type="Script" path="res://SelectionCircle.gd" id="5_ux4px"]
[ext_resource type="Script" path="res://RangeMarker.gd" id="6_57s3n"]
[ext_resource type="Script" path="res://HealthBar.gd" id="7_xcjm4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1togq"]
size = Vector2(30, 30)

[sub_resource type="Animation" id="Animation_h650g"]
resource_name = "stand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, null, null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HairSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ShirtSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PantsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [49]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ShoeSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [65]
}

[sub_resource type="Animation" id="Animation_rv6e0"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HairSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShirtSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PantsSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShoeSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1hkh"]
_data = {
"stand": SubResource("Animation_h650g"),
"walk": SubResource("Animation_rv6e0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cln8p"]
size = Vector2(10, 200)

[node name="Player" type="Area2D"]
script = ExtResource("1_mxhpc")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1togq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e1hkh")
}

[node name="BodySprite" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -15)
scale = Vector2(2, 2)
texture = ExtResource("2_xdt7w")
hframes = 8
vframes = 12
frame = 3

[node name="HairSprite" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -15)
scale = Vector2(2, 2)
texture = ExtResource("2_xdt7w")
hframes = 8
vframes = 12
frame = 19

[node name="ShirtSprite" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -15)
scale = Vector2(2, 2)
texture = ExtResource("2_xdt7w")
hframes = 8
vframes = 12
frame = 35

[node name="PantsSprite" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -15)
scale = Vector2(2, 2)
texture = ExtResource("2_xdt7w")
hframes = 8
vframes = 12
frame = 51

[node name="ShoeSprite" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -15)
scale = Vector2(2, 2)
texture = ExtResource("2_xdt7w")
hframes = 8
vframes = 12
frame = 67

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="BeamSpell" type="Area2D" parent="."]
collision_layer = 128
script = ExtResource("3_vdevf")

[node name="TargetRect" type="Node2D" parent="BeamSpell"]
visible = false
z_index = 2
script = ExtResource("4_i31qc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeamSpell"]
z_index = 100
position = Vector2(100, 2.08165e-12)
rotation = 1.5708
shape = SubResource("RectangleShape2D_cln8p")
debug_color = Color(0.917647, 0, 0.705882, 0.65098)

[node name="SelectionCircle" type="Node2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 13)
scale = Vector2(1, 0.5)
script = ExtResource("5_ux4px")

[node name="RangeMarker" type="Node2D" parent="."]
visible = false
script = ExtResource("6_57s3n")

[node name="HealthBar" type="Node2D" parent="."]
script = ExtResource("7_xcjm4")
